@@ -20,6 +20,7 @@
   * rdup-tr: add path encryption/decryption. Not only
     can you encrypt the files' contents but also
     the actual file names. See options -X and -Y.
+  * rdup*: shaved off 1 byte from the r_entry struct
 
 
 14 Feb 2009: 0.7.1 Miek <miek@miek.nl>
